syntax = "proto3";

package gen;

import "google/protobuf/timestamp.proto";
import "user.proto";

option go_package = "github.com/Salam4nder/user/internal/proto/gen";

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    UserResponse user = 1;
    string access_token = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp access_token_expires_at = 4;
    google.protobuf.Timestamp refresh_token_expires_at = 5;
}
